# event-oriented-bank-accounts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/application/: application.py  notification_log.py
src/application/infrastructure/: in_memory.py  postgresql.py  sqlite.py
src/domain/: aggregate.py  events.py
src/domain_model/: aggregate.py  domain_events.py
src/domain_model/mapper/: cipher.py  transcoders.py  transcodings.py
src/domain_model/notification/: in_memory.py  postgresql.py  sqlite.py
src/domain_model/recorders/: __init__.py  in_memory.py  postgresql.py  sqlite.py
src/patterns/: __init__.py  aggregate.py
src/patterns/application/: notification_log.py  repository.py  snapshot.py
src/patterns/application_layer/: notification_log.py  repository.py  snapshot.py
src/patterns/application_layer/application/: application.py  infrastructure_factory.py
src/patterns/domain_model/: __init__.py  aggregate.py  domain_event.py  event_store.py  mapper.py  notification.py  recorder.py
src/patterns/domain_model_layer/: aggregate.py  event_store.py  mapper.py  notification.py  recorder.py
tests/domain/: test_aggregate.py  test_events.py
tests/domain_model/: conftest.py  test_aggregate.py
tests/domain_model/mapper/: test_trancoders.py
tests/unit/application/: test_application.py  test_notification_log.py  test_repository.py
tests/unit/domain_model/: test_domain_events.py  test_event_store.py  test_in_memory_notification.py  test_in_memory_recorder.py
(+9 files in other folders)
